# sbyc_course_app

./: .gitignore  MANIFEST.in  Procfile  README.md  environment.yml  manage.py  pyproject.toml  requirements.txt  requirements_full.txt  setup.cfg
course_maps/: apps.py  flags.py  forms.py  mapping.py  models.py  settings.yaml  urls.py  views.py
course_maps/fixtures/: course_marks.csv  flags.yaml
course_maps/fixtures/raw_data/: course_objects.yaml  course_order.json  course_order.yaml
course_maps/map_data/: course_marks.csv  course_objects.yaml  course_order.yaml
course_maps/templates/: base.html  chart.html  map.html
sbyc_course_app/: MANIFEST.in  flags.py  forms.py  mapping.py  setup.cfg  urls.py  utils.py  views.py
sbyc_course_app/fixtures/: flags.yaml
sbyc_course_app/fixtures/map_data/: course_marks.csv  course_objects.yaml  course_order.yaml
sbyc_course_app/fixtures/map_data_spring24/: course_objects.yaml  course_order.yaml
sbyc_course_app/fixtures/map_data_summer24/: course_objects.yaml
sbyc_course_app/fixtures/map_data_summer25/: course_marks.yaml
sbyc_course_app/fixtures/map_data_v1/: course_marks.csv
sbyc_course_app/sbyc_course_app/: apps.py  flags.py  mapping.py  urls.py  views.py
sbyc_course_app/sbyc_course_app/templates/: chart.html  chart_base.html
sbyc_course_app/static/css/: sbyc_styles.css  style.css
sbyc_course_app/static/js/: courses.js
sbyc_course_app/templates/: chart.html  chart_app.html  flag_table.html
sbyc_fns/: asgi.py  production_settings.py  settings.py  urls.py  wsgi.py
sbyc_fns/static/: course_meta_data.json  mark_meta.json  marks.json
static/: course_marks.json  course_marks.yaml  course_meta.yaml  course_objects.json  course_objects.yaml  course_order.json  course_order.yaml
static/course_maps/fixtures/raw_data/: course_objects.json
