[project]
name = "sbyc-course-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nick-fournier", email = "nichfournier@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.5",
    "django-crispy-forms>=2.3",
    "folium>=0.19.4",
    "gpxpy>=1.6.2",
    "pyyaml>=6.0.2",
]

[project.scripts]
sbyc-course-app = "sbyc_course_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
