[project]
name = "sbyc-course-app"
version = "0.25.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nick-fournier", email = "nichfournier@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.5",
    "django-crispy-forms>=2.3",
    "folium>=0.19.4",
    "gpxpy>=1.6.2",
    "pyyaml>=6.0.2",
]

[project.scripts]
sbyc-course-app = "sbyc_course_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E", "F", "B", "I"]

# 2. Avoid enforcing line-length violations (`E501`)
# ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"
