[metadata]
name = sbyc_course_app
version = 0.1
description = A Django app to plot South Beach Yacht Club courses.
long_description = file: README.rst
url = NA
author = Nicholas Fournier
author_email = nichfournier@gmail.com
license = GNU-GPL
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
	Django>=4.1
	django-crispy-forms>=2.0
	django-tables2>=2.5.0
	django-user-agents>=0.4.0
	folium>=0.14.0
	geographiclib>=2.0
	haversine>=2.7.0
	pandas>=1.5
	PyYAML>=6.0
	whitenoise>=6.3.0
    crispy-bootstrap4>=2.0
    gpxpy>=1.5.0
